--- a/src/components/CardComponent/card.style.css
+++ b/src/components/CardComponent/card.style.css
@@ -13,3 +13,20 @@
     flex-wrap: wrap;
     width: 60vw;
 }
+@media only screen and (max-width:1024px) {
+    .card {
+        width: 90vw;
+    }
+  }
+@media only screen and (max-width:768px) {
+    .card {
+        width: 85vw;
+    }
+  }
+@media only screen and (max-width:480px) {
+    .card {
+        justify-content: left;
+        width: 75vw;
+        display: block;
+    }
+  }
