--- a/src/components/ImageComponent/imageContainer.style.css
+++ b/src/components/ImageComponent/imageContainer.style.css
@@ -1,3 +1,6 @@
-.image-container {
-    width:30vw;
-}
+
+@media only screen and (max-width:768px) {
+    .image-container  {
+        display: none;
+    }
+  }
