--- a/src/components/RegisterFormComponent/registerForm.style.css
+++ b/src/components/RegisterFormComponent/registerForm.style.css
@@ -1,14 +1,14 @@
 .form {
-    width: 25vw;
-    padding: 20px;
+    width: 25vw;   
+    padding: 40px 70px 0px 70px;
 }
 .header {
     display:flex;
     justify-content: flex-end;
 }
 .header-title {
-    color: grey;
-    font-size: 15px;
+    color: grey;  
+    font-size: 14px;
     font-weight: 500;
     margin-right: 20px;
 }
@@ -16,12 +16,30 @@
     font-size:34px;
     font-weight:700px;
 }
-.register-title {
+.register-title, .footer-title{
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 400;
     color: grey;
+}
+.register-title{    
     margin-top: -25px;
 }
-.all-inputs {
-    margin-top: 30px;
+.all-inputs,.loginButton-container {
+    margin-top: 50px;
+}
+.footer {
+    margin-top: 50px;
+    display: flex;
+}
+.media-logo {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-top:10px;
+    cursor: pointer;
 }
